build_err_new.txt
[  5%] Building CXX object CMakeFiles/app.dir/src/implem_free_will.cpp.obj
C:\Users\LordN.NASHOU\Desktop\code\ASHB2\src\implem_free_will.cpp:1577:10: error: no declaration matches 'void FreeWillSystem::updateHieratchicalNeed(Entity*, Action*)'
 1577 |     void FreeWillSystem::updateHieratchicalNeed(Entity* ent, Action* action){
      |          ^~~~~~~~~~~~~~
C:\Users\LordN.NASHOU\Desktop\code\ASHB2\src\implem_free_will.cpp:1577:10: note: no functions named 'void FreeWillSystem::updateHieratchicalNeed(Entity*, Action*)'
In file included from C:/Users/LordN.NASHOU/Desktop/code/ASHB2/src/header/Entity.h:10,
                 from C:\Users\LordN.NASHOU\Desktop\code\ASHB2\src\implem_free_will.cpp:9:
C:/Users/LordN.NASHOU/Desktop/code/ASHB2/src/header/FreeWillSystem.h:145:7: note: 'class FreeWillSystem' defined here
  145 | class FreeWillSystem {
      |       ^~~~~~~~~~~~~~
C:\Users\LordN.NASHOU\Desktop\code\ASHB2\src\implem_free_will.cpp:2468:6: error: redefinition of 'void FreeWillSystem::saveTo(std::ofstream&) const'
 2468 | void FreeWillSystem::saveTo(std::ofstream& file) const {
      |      ^~~~~~~~~~~~~~
C:\Users\LordN.NASHOU\Desktop\code\ASHB2\src\implem_free_will.cpp:2373:6: note: 'void FreeWillSystem::saveTo(std::ofstream&) const' previously defined here
 2373 | void FreeWillSystem::saveTo(std::ofstream& file) const {
      |      ^~~~~~~~~~~~~~
C:\Users\LordN.NASHOU\Desktop\code\ASHB2\src\implem_free_will.cpp:2481:6: error: redefinition of 'void FreeWillSystem::loadFrom(std::ifstream&)'
 2481 | void FreeWillSystem::loadFrom(std::ifstream& file) {
      |      ^~~~~~~~~~~~~~
C:\Users\LordN.NASHOU\Desktop\code\ASHB2\src\implem_free_will.cpp:2393:6: note: 'void FreeWillSystem::loadFrom(std::ifstream&)' previously defined here
 2393 | void FreeWillSystem::loadFrom(std::ifstream& file) {
      |      ^~~~~~~~~~~~~~
mingw32-make[2]: *** [CMakeFiles\app.dir\build.make:256: CMakeFiles/app.dir/src/implem_free_will.cpp.obj] Error 1
mingw32-make[1]: *** [CMakeFiles\Makefile2:82: CMakeFiles/app.dir/all] Error 2
mingw32-make: *** [Makefile:90: all] Error 2
